<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Registration.RegistrationActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/transparent"
        android:minHeight="?attr/actionBarSize" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_with_google"
            style="@style/SocialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_google" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_with_facebook"
            style="@style/SocialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_with_facebook" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_with_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:background="@drawable/button_border"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonsignup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="9dp"
                android:layout_weight="1"
                android:background="@drawable/button_border"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            style="@style/SocialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_border"
            android:text="@string/reqister_later"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/sign_up_Agreement"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
